updated todo